--- a/translations/pt-BR/content/cultures/culture.json
+++ b/translations/pt-BR/content/cultures/culture.json
@@ -123,13 +123,13 @@
                 "UI_DISABLE": "Desligar",
                 "UI_UPLOAD": "Subir",
                 "UI_UPDATE": "Atualizar",
-                "UI_BRING_THE_DAWN": "Até o Amanhecer",
+                "UI_BRING_THE_DAWN": "Traga o Amanhecer",
                 "UI_PERPETUAL_EDITION": "Edição Perpétua",
                 "UI_LOADEDTITLE": "Onde nós estávamos?",
                 "UI_LOADEDDESC": "- nós carregamos o jogo.",
                 "UI_LOADFAILEDTITLE": "Falha ao carregar o jogo",
                 "UI_LOADFAILEDDESC": "Seu jogo salvo parece estar corrompido. Tente restaurar um arquivo de backup salvo ou limpar seus dados.",
-                "LOADING_QUOTE_1": "“A Selva cresce ao redor das paredes do Mansus.\n\nComo qualquer estudante de Histórias sabe, o Mansus não tem paredes.”\n\nChristopher Illopoly, <i>Viajando à noite</i>",
+                "LOADING_QUOTE_1": "“A Floresta cresce ao redor das paredes do Mansus.\n\nComo qualquer estudante de Histórias sabe, o Mansus não tem paredes.”\n\nChristopher Illopoly, <i>Viajando à noite</i>",
                 "LOADING_QUOTE_2": "<i>Explore. Assuma riscos.\n\nVocê nem sempre saberá o que fazer a seguir. Continue experimentando e você o dominará.</i>",
                 "LEGACY_MAIN_MENU": "Menu principal",
                 "LEGACY_ANOTHER_DESCENT": "Comece outra descida",
