--- a/translations/pt-BR/loc/decks/mansus.json
+++ b/translations/pt-BR/loc/decks/mansus.json
@@ -11,7 +11,7 @@
             ],
             "defaultcard": "fleeting",
             "resetonexhaustion": false,
-            "comments": "mas isso só deve ser tirado de uma vez."
+            "comments": "mas isso só deve ser tirado uma vez."
         },
         {
             "id": "mansus_wood",
@@ -52,7 +52,7 @@
                 "rumour"
             ],
             "drawmessages": {
-                "influenceknock": "Ontem à noite, eu vim, na Floresta, para a rocha alta chanfrada chamada Templo da Roda. Seu flanco, repleto de líquen negro e sinais de olho, abriu como uma boca sob minhas mãos, e passei para o espaço sussurrante de dentro. Os Deuses-que-foram-pedra, as primeiras das Horas, desapareceram quase todas agora, mas aqui as suas vozes continuam: Roda, Sílex, Maré e outros sem nome.",
+                "influenceknock": "Ontem à noite, eu vim na Floresta para a rocha alta escaldada chamada Templo da Roda. Seu flanco, repleto de lábios negros e sinais de olho, aberto como uma boca debaixo das minhas mãos, e passei no espaço de sussurro de dentro. Os Deuses-que-eram-de-pedra, a primeira das Horas, desapareceram quase todas agora, mas aqui as suas vozes continuam: Roda, Sílex, Maré e outros sem nome.",
                 "influenceheart": "Na Floresta além das paredes do Mansus, uma pedra chanfrada se ergue como os restos petrificados de um gigante dançante. Passei a mão ao longo de seu flanco sobre os sinais de olho e o líquen e o graffiti grosseiro dos menores poderes da Floresta. e eu senti a vibração da Roda, que se fora. Ela se fora, mas algo permanece.",
                 "fragmentsecrethistoriesb": "Em meu sono, Eu cheguei à alta e e biselada rocha que ainda chamam de Templo da Roda, embora a Hora chamada Roda esteja extinta há muito. Uma outra mão arranhara um segredo na lanterna negra em sua lateral. Eu gravei esse segredo em minha memória para o preservar em meu desperta, antes que Veludo viesse de dentro das profundezas aveludadas da Floresta para o apagar. Veludo tem ciúmes de seus segredos.",
                 "rumour": "Eu vim para o Templo da Roda, aquela rocha alta e espinhenta, aquele memorial aos deuses mortos. Aqueles que tiram a própria vida, por vezes, se jogam de suas alturas em sonhos primeiro. Encontrei outra alma adormecida, arranhando o sinal dos olhos no líquen em seu pico. Não me lembro do que se passou entre nós, mas reconhecerei o seu rosto no mundo da vigília."
@@ -69,7 +69,7 @@
             "drawmessages": {
                 "influencewinterc": "Ontem à noite, a Porta Branca estava brilhante como um espelho, como neve fresca, brilhante como a lua de enxaqueca. Lembro-me do seu brilho, mas me lembro ainda mais do seu frio. Eu botei minha bochecha contra ela. Ainda estou sentindo a dor do frio no meu crânio.",
                 "fragmentsecrethistoriesb": "Muitos dos Mortos entram no Mansus através da Porta Branca. Eles vagueiam seus corredores em silêncio até se perderem. Alguns abraçam uns aos outros, outros devoram uns aos outros, alguns forçam seu caminho aos sonhos dos vivos. Alguns recordam suas memórias na pedra do Mansus, onde é macia. Eles coçam com as unhas, entenda. Ontem à noite eu li uma dessas memórias. ",
-                "restlessness": "Alguns mortos estão perdidos na Floresta, alguns sobem mais, mas muitos - tantos - passam pela Porta Branca para a Mansão se calampara sempre. Ontem à noite, eles enxamearam a entrada. Nossas bocas selaram-se em feridas curadas. Seus olhos vagavam pela minha pele. As mãos deles buscavam meu calor, mas meu toque os queimou e eles recuaram. A urgência deles me infectava."
+                "restlessness": "Alguns mortos estão perdidos na Floresta, alguns sobem mais, mas muitos - tantos - passam pela Porta Branca para a Casa, se calam para sempre. Ontem à noite, eles enxamearam a entrada. Nossas bocas eram feridas curadas. Seus olhos vagavam pela minha pele. As mãos deles buscavam meu calor, mas meu toque os queimou e eles recuaram. A urgência deles me infectava."
             },
             "resetonexhaustion": true
         },
