--- a/translations/pt-BR/loc/elements/articles_playerauthored.json
+++ b/translations/pt-BR/loc/elements/articles_playerauthored.json
@@ -237,7 +237,7 @@
         {
             "id": "articlewintera",
             "label": "O Branco: Uma breve discussão",
-            "description": "Uma disquisição concisa sobre o inverno. [Fale com seu Patrono para ser pago por isso.]",
+            "description": "Uma disquisição concisa sobre o Inverno. [Fale com seu Patrono para ser pago por isso.]",
             "aspects": {
                 "article": 1,
                 "winter": 2
