--- a/translations/pt-BR/loc/elements/books_language.json
+++ b/translations/pt-BR/loc/elements/books_language.json
@@ -7,11 +7,11 @@
                 "text": 1,
                 "auctionable": 1
             },
-            "description": "É exatamente o que você precisa para atualizar seu conhecimento de latim."
+            "description": "É exatamente o que você precisa para atualizar seu conhecimento de Latim."
         },
         {
             "id": "textbookfucine",
-            "label": "O Jornal de Alessandro LaCroce",
+            "label": "O Diário de Alessandro LaCroce",
             "aspects": {
                 "text": 1,
                 "auctionable": 2
