--- a/translations/pt-BR/loc/elements/commissions.json
+++ b/translations/pt-BR/loc/elements/commissions.json
@@ -46,7 +46,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -76,7 +76,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -106,7 +106,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -114,7 +114,7 @@
                 },
                 {
                     "id": "reason2",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -144,7 +144,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -174,7 +174,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -204,7 +204,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -212,7 +212,7 @@
                 },
                 {
                     "id": "reason2",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -242,7 +242,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -272,7 +272,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -302,7 +302,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -310,7 +310,7 @@
                 },
                 {
                     "id": "reason2",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -340,7 +340,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -370,7 +370,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -400,7 +400,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -438,7 +438,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -468,7 +468,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -498,7 +498,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -536,7 +536,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -566,7 +566,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -596,7 +596,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -634,7 +634,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -664,7 +664,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -694,7 +694,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -702,7 +702,7 @@
                 },
                 {
                     "id": "reason2",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -732,7 +732,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -762,7 +762,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -792,7 +792,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -800,7 +800,7 @@
                 },
                 {
                     "id": "reason2",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -830,7 +830,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -860,7 +860,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -890,7 +890,7 @@
                 },
                 {
                     "id": "reason1",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
@@ -898,7 +898,7 @@
                 },
                 {
                     "id": "reason2",
-                    "label": "Motivo",
+                    "label": "Razão",
                     "required": {
                         "reason": 1
                     },
