--- a/translations/pt-BR/loc/elements/cults.json
+++ b/translations/pt-BR/loc/elements/cults.json
@@ -43,7 +43,7 @@
                     "description": "Para um bom senso de ocasião. Consome Ingredientes e Influências; usa, mas não consome, ferramentas."
                 }
             ],
-            "description": "Uma sociedade oculta dedicada às horas de luta e de conquista. [Você pode usar adultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Disciple; alguns talentosos Discípulos podem ser exaltados ainda mais, para Assassinos]",
+            "description": "Uma sociedade oculta dedicada às horas de luta e de conquista. [Você pode usar Cultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Discípulo; alguns talentosos Discípulos podem ser exaltados ainda mais, para Assassinos]",
             "unique": true
         },
         {
@@ -89,7 +89,7 @@
                     "description": "Para um bom senso de ocasião. Consome Ingredientes e Influências; usa, mas não consome, ferramentas."
                 }
             ],
-            "description": "Uma sociedade oculta dedicada ao fogo que muda e refaz. [Você pode usar adultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Disciple; alguns Discípulos talentosos podem ser exaltados ainda mais, para Reshapers.]",
+            "description": "Uma sociedade oculta dedicada ao fogo que muda e refaz. [Você pode usar Cultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Discípulo; alguns Discípulos talentosos podem ser exaltados ainda mais, para Reformadores.]",
             "unique": true
         },
         {
@@ -135,7 +135,7 @@
                     "description": "Para um bom senso de ocasião. Consome Ingredientes e Influências; usa, mas não consome, ferramentas."
                 }
             ],
-            "description": "Uma sociedade oculta dedicada aos mistérios do nascimento, sangue e apetite. [Você pode usar adultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um crente pode ser promovido a um Discípulo; alguns talentosos Discípulos podem ser exaltados ainda mais, para os cipriotas.]",
+            "description": "Uma sociedade oculta dedicada aos mistérios do nascimento, sangue e apetite. [Você pode usar Cultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um crente pode ser promovido a um Discípulo; alguns talentosos Discípulos podem ser exaltados ainda mais, para Cipriotas.]",
             "unique": true
         },
         {
@@ -181,7 +181,7 @@
                     "description": "Para um bom senso de ocasião. Consome Ingredientes e Influências; usa, mas não consome, ferramentas."
                 }
             ],
-            "description": "Uma sociedade oculta dedicada ao tambor que nunca consegue acabar. [Você pode usar adultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Disciple; alguns Discípulos talentosos podem ser exaltados ainda mais, para os Tarantellists.]",
+            "description": "Uma sociedade oculta dedicada ao tambor que nunca consegue acabar. [Você pode usar Cultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Discípulo; alguns Discípulos talentosos podem ser exaltados ainda mais, para os Tarantelistas.]",
             "unique": true
         },
         {
@@ -227,7 +227,7 @@
                     "description": "Para um bom senso de ocasião. Consome Ingredientes e Influências; usa, mas não consome, ferramentas."
                 }
             ],
-            "description": "Uma sociedade oculta dedicada às Horas que abrem portas. [Você pode usar adultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Disciple; alguns Discípulos talentosos podem ser exaltados ainda mais, para Keys.]",
+            "description": "Uma sociedade oculta dedicada às Horas que abrem portas. [Você pode usar Cultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Discípulo; alguns Discípulos talentosos podem ser exaltados ainda mais, para Chaves.]",
             "unique": true
         },
         {
@@ -273,7 +273,7 @@
                     "description": "Para um bom senso de ocasião. Consome Ingredientes e Influências; usa, mas não consome, ferramentas."
                 }
             ],
-            "description": "Uma sociedade oculta dedicada à compreensão da luz que vaza de um lugar mais feroz. [Você pode usar adultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Disciple; alguns Discípulos talentosos podem ser exaltados ainda mais alto, para os costas.]",
+            "description": "Uma sociedade oculta dedicada à compreensão da luz que vaza de um lugar mais feroz. [Você pode usar Cultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Disciple; alguns Discípulos talentosos podem ser exaltados ainda mais alto, a Videntes.]",
             "unique": true
         },
         {
@@ -319,7 +319,7 @@
                     "description": "Para um bom senso de ocasião. Consome Ingredientes e Influências; usa, mas não consome, ferramentas."
                 }
             ],
-            "description": "Uma sociedade oculta dedicada ao caos, e às inesperadas Horas. [Você pode usar adultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Discípulo; alguns talentosos Discípulos podem ser exaltados ainda mais, aos Arsenais]",
+            "description": "Uma sociedade oculta dedicada ao caos, e às Horas inesperadas. [Você pode usar Cultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Discípulo; alguns talentosos Discípulos podem ser exaltados ainda mais, aos Arsenais]",
             "unique": true
         },
         {
@@ -418,7 +418,7 @@
                     "description": "Para um bom senso de ocasião. Consome Ingredientes e Influências; usa, mas não consome, ferramentas."
                 }
             ],
-            "description": "Uma sociedade oculta dedicada ao silêncio que vem e ao frio que acaba. [Você pode usar adultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Discípulo; alguns talentosos podem ser exaltados ainda mais, como uma condição de silêncio letal.]",
+            "description": "Uma sociedade oculta dedicada ao silêncio que vem e ao frio que acaba. [Você pode usar Cultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Discípulo; alguns talentosos podem ser exaltados ainda mais, como uma condição de silêncio letal.]",
             "unique": true
         },
         {
@@ -464,7 +464,7 @@
                     "description": "Para um bom senso de ocasião. Consome Ingredientes e Influências; usa, mas não consome, ferramentas."
                 }
             ],
-            "description": "Uma sociedade oculta dedicada a tudo o que se perdeu e o que ainda pode voltar. [Você pode usar adultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Discípulo; alguns talentosos podem ser exaltados ainda mais, como uma condição de silêncio letal.]",
+            "description": "Uma sociedade oculta dedicada a tudo o que se perdeu e o que ainda pode voltar. [Você pode usar Cultos com o verbo de Conversa para recrutar ou promover seguidores, e para enviá-los sobre errantes para coletar recursos. Um Crente pode ser promovido a um Discípulo; alguns talentosos podem ser exaltados ainda mais, como uma condição de silêncio letal.]",
             "unique": true,
             "icon": "cultwinter_1"
         }
