--- a/translations/pt-BR/loc/elements/influences.json
+++ b/translations/pt-BR/loc/elements/influences.json
@@ -168,7 +168,7 @@
         },
         {
             "id": "influenceforgec",
-            "label": "Um Calor Trembling",
+            "label": "Um Calor Tremulante",
             "aspects": {
                 "forge": 6,
                 "influence": 1
