--- a/translations/pt-BR/loc/elements/jobs.json
+++ b/translations/pt-BR/loc/elements/jobs.json
@@ -62,7 +62,7 @@
             "slots": [
                 {
                     "id": "Diligence",
-                    "label": "Diligence",
+                    "label": "Diligência",
                     "actionid": "work",
                     "required": {
                         "reason": 1
@@ -87,7 +87,7 @@
             "slots": [
                 {
                     "id": "Diligence",
-                    "label": "Diligence",
+                    "label": "Diligência",
                     "actionid": "work",
                     "required": {
                         "reason": 1
