--- a/translations/pt-BR/loc/elements/legacy_apostle_elements.json
+++ b/translations/pt-BR/loc/elements/legacy_apostle_elements.json
@@ -32,7 +32,7 @@
         {
             "id": "apostleforge.pillar1",
             "label": "Técnica Quebra-terra",
-            "description": "A VELOCIDADE DE SHAPER ESPECS: 'Eu devo implementar a Forge. Configure uma Carcaça no coração do motor. Desperte-a com os mistérios mais altos. Prepare a alquimia mais feroz para alimentá-la. Encontre a falha no lugar na borda da terra que tem o mesmo nome em cada História. Traga o dispositivo para lá, com a chave de banho que Sulochana, o Ligeian, sabe. Evoca o maior calor da Forge; emprega os mais potentes Mistérios da Abertura; e eu estarei presente na vossa dissolução.\""
+            "description": "O FORMADOR DIZ: 'Eu devo implementar a Forge. Configure uma Carcaça no coração do motor. Desperte-a com os mistérios mais altos. Prepare a alquimia mais feroz para alimentá-la. Encontre a falha no lugar na borda da terra que tem o mesmo nome em cada História. Traga o dispositivo para lá, com a Chave Mordente que Sulochana, a Ligeéia, conhece. Evoca o maior calor da Forge; emprega os mais potentes Mistérios da Abertura; e eu estarei presente na vossa dissolução.\""
         },
         {
             "id": "apostleforge.pillar2.dormant",
