--- a/translations/pt-BR/loc/elements/legacy_byt_elements.json
+++ b/translations/pt-BR/loc/elements/legacy_byt_elements.json
@@ -2,7 +2,7 @@
     "elements": [
         {
             "id": "legacybytjob",
-            "description": "Dá-se o caso de escrever e de hesitar em pintar apenas uma vida, acima de tudo, na certeza dos subsídios.",
+            "description": "Uma pessoa brinca de escrever e uma pessoa brinca de pintar mas uma pessoa vive, acima de tudo, com certeza da sua mesada.",
             "label": "Isso e Aquilo",
             "aspects": {
                 "benign": 1,
@@ -11,7 +11,7 @@
         },
         {
             "id": "legacybytjobmatured",
-            "description": "Dá-se o caso de escrever e de hesitar em pintar apenas uma vida, acima de tudo, na quase certeza dos subsídios.",
+            "description": "Uma pessoa brinca de escrever e uma pessoa brinca de pintar mas uma pessoa vive, acima de tudo, com certeza da sua mesada.",
             "label": "Isso e Aquilo",
             "aspects": {
                 "benign": 1,
