--- a/translations/pt-BR/loc/elements/mundane_elements.json
+++ b/translations/pt-BR/loc/elements/mundane_elements.json
@@ -39,7 +39,7 @@
             "aspects": {
                 "ingredient": 1
             },
-            "description": "Basta de me apoiar um pouco de conforto adequado."
+            "description": "Suficiente para manter-me por pouco tempo em conforto adequado."
         },
         {
             "id": "compensation",
