--- a/translations/pt-BR/loc/elements/reputation.json
+++ b/translations/pt-BR/loc/elements/reputation.json
@@ -6,7 +6,7 @@
             "aspects": {
                 "reputation": 1
             },
-            "description": "A descansiedade persiste. [Mystique pode atrair a atenção dos Caçadores. Eles não podem usá-lo para construir um caso contra você, mas isso os incentivará a parecer mais resistente.]",
+            "description": "A estranheza persiste. [Mystique pode atrair a atenção dos Caçadores. Eles não podem usá-lo para construir um caso contra você, mas isso os incentivará a parecer mais resistente.]",
             "lifetime": 300
         },
         {
