--- a/translations/pt-BR/loc/elements/spirits.json
+++ b/translations/pt-BR/loc/elements/spirits.json
@@ -84,7 +84,7 @@
                 "moth": 8,
                 "deceiver": 8
             },
-            "description": "Nos cantos da Forge, nos limites dos Mansus, o fogo de Glory encontra elementos pálidos. Aqui está um vapour astuto para infectar os sonhos do seu inimigo.",
+            "description": "Nos cantos da Forja, nos limites do Mansus, o fogo da Glória encontra elementos mais básicos. Aqui está um vapor astuto para infectar os sonhos do seu inimigo.",
             "lifetime": 180,
             "xtriggers": {
                 "killsummoned": "influenceforge"
