--- a/translations/pt-BR/loc/elements/vaults.json
+++ b/translations/pt-BR/loc/elements/vaults.json
@@ -198,7 +198,7 @@
         },
         {
             "id": "vaultcapital5",
-            "label": "Congregação de St Felix de Schu├ren",
+            "label": "Congregação de St Felix de Schüren",
             "aspects": {
                 "vault": 1,
                 "location": 1,
@@ -242,7 +242,7 @@
                     "actionid": "explore"
                 }
             ],
-            "description": "Um enclave não conformista de um sete heterodoxo de um desfiladeiro calvinista, afastado num canto ímpar da cidade. Espreitam hinos com uma gusto inapropriado, numa linguagem de arranjo de garganta que não é muito bem o latim.",
+            "description": "Um enclave não conformista de uma seita heterodoxa de um ramo Calvinista, afastado num canto estranho da cidade. Eles gritam hinos com um gusto inapropriado, numa linguagem de arranho de garganta que não é muito bem Latim.",
             "unique": true
         },
         {
