--- a/translations/pt-BR/loc/endings/endings.json
+++ b/translations/pt-BR/loc/endings/endings.json
@@ -174,7 +174,7 @@
         {
             "id": "wintersacrifice",
             "label": "Indo silenciosamente",
-            "description": "Na sala superior da casa onde me tomo, eu respiro nevoeiro e meus olhos crescem macios. A luz no quarto é a luz ao fundo do sol. Tenho um final lindo. [Eu me associei aos poderes do inverno.]",
+            "description": "Na sala superior da casa onde sou tomado, eu minha respiração se condensa e meus olhos ficam macios. A luz no quarto é a luz no fim do sol. Eu sou um belo final. [Eu me associei aos poderes do inverno.]",
             "image": "suninrags",
             "flavour": "Melancholy",
             "anim": "DramaticLight",
