--- a/translations/pt-BR/loc/legacies/1_legacies.json
+++ b/translations/pt-BR/loc/legacies/1_legacies.json
@@ -77,7 +77,7 @@
         {
             "id": "apostleforge",
             "label": "Apóstolo Ardente",
-            "startdescription": "Aquele que nos formou ascendeu a um estado mais elevado... em uma história, ao menos. O passado é incerto. Porém, eu cuidarei do cadinho para sua próxima ascenção.",
+            "startdescription": "Aquele que nos formou ascendeu a um estado mais elevado... em uma história, ao menos. O passado é incerto. Porém, eu cuidarei do crisol para sua próxima ascensão.",
             "description": "O nosso Grão Formador cresceu em poder - e tem inimigos poderosos. Ele continuará escondendo-se, enquanto eu o servirei como seu instrumento.",
             "effects": {
                 "health": 2,
