--- a/translations/pt-BR/loc/recipes/2_cluesdream.json
+++ b/translations/pt-BR/loc/recipes/2_cluesdream.json
@@ -88,7 +88,7 @@
             "requirements": {
                 "fascination": 1
             },
-            "startdescription": "As portas da visão balançando largas. Um pouco de escuridão vai derreter a minha luz. Até mesmo Dread tem seus usos.",
+            "startdescription": "As portas da visão balançando largas. Um pouco de escuridão vai derreter a minha luz. Até mesmo Pavor tem seus usos.",
             "hintonly": true,
             "craftable": false
         },
