--- a/translations/pt-BR/loc/recipes/dream_general.json
+++ b/translations/pt-BR/loc/recipes/dream_general.json
@@ -262,7 +262,7 @@
                 "lantern": 1
             },
             "startdescription": "Vou me dedicar à busca do conhecimento.",
-            "description": "Falei as palavras: \"Cada hora tem sua cor, mas a cor só existe onde há luz. Irei para onde há luz, embora esteja dando salgo. [Eu fiz um passo no sentido de uma ascensão terrível.]",
+            "description": "Falei as palavras: \"Cada Hora tem sua cor, mas a cor só existe onde há luz\". Irei para onde há luz, ainda que ela me alveje à transparência do vidro. [Eu avancei um passo em direção a uma ascensão terrível.]",
             "effects": {
                 "ascensionenlightenmenta": -1,
                 "ascensionenlightenmentb": 1
