--- a/translations/pt-BR/loc/recipes/events_cabaret.json
+++ b/translations/pt-BR/loc/recipes/events_cabaret.json
@@ -128,8 +128,8 @@
             "requirements": {
                 "notoriety": 1
             },
-            "startdescription": "O desempenho quase não começou quando uma lua de terror surge do público!",
-            "description": "O desempenho termina imediatamente; as luzes nascem; somos trazidos dos nossos assentos e instados a entrar na rua. Nunca está claro o que aconteceu, mas a equipe do Clube parece preparada, como se isso tivesse acontecido antes. As luzes florescem em janelas próximas e a mandíbula de passersby na multidão de convidados se espalhando pela noite.",
+            "startdescription": "A performance mal começou quando um gemido de terror surge do público!",
+            "description": "A performance termina imediatamente; as luzes acendem; somos enxotados dos nossos assentos e instados a ir para a rua. Nunca fica claro o que aconteceu, mas a equipe do Clube parece preparada, como se isso tivesse acontecido antes. As luzes florescem em janelas próximas e os transeuntes ficam boquiabertos com a multidão de convidados se dispersando pela noite.",
             "warmup": 15,
             "craftable": false
         },
