--- a/translations/pt-BR/loc/recipes/explore.json
+++ b/translations/pt-BR/loc/recipes/explore.json
@@ -144,7 +144,7 @@
             "deckeffects": {
                 "commontomes": 1
             },
-            "startdescription": "É preciso tempo para ordenar o ouro das raias do cavalo, o trigo do joão, o sangue da água. Se eu comprar livros o bastante, encontrarei algo interessante.",
+            "startdescription": "É preciso tempo para separar o ouro da escória, o trigo do joio, o sangue da água. Se eu comprar livros o bastante, encontrarei algo interessante.",
             "description": "Achei algo digno de nota.",
             "warmup": 30,
             "craftable": true,
@@ -183,7 +183,7 @@
             "deckeffects": {
                 "auctionedcommontomes": 1
             },
-            "startdescription": "Nós buscamos cadeiras alarmantes Rietveld em um quarto de leilão sem janelas com paredes laranja queimadas vivas, esperando o leilão anunciar o que está oferecendo. A bebida de uma nova tinta gira o cérebro. [Hit Start para ver o que há na oferta; ou adicione um item que deseja vender.]",
+            "startdescription": "Nós sentamos em alarmantes cadeiras Rietveld em um quarto de leilão sem janelas com paredes laranja vividamente queimadas, esperando o leiloeiro anunciar o que está oferecendo. O cheiro de tinta fresca faz o cérebro girar. [Clique Começar para ver o que há em oferta; ou adicione um item que deseja vender.]",
             "description": ".",
             "warmup": 5,
             "craftable": true,
