--- a/translations/pt-BR/loc/recipes/explore_vaults_a_capital.json
+++ b/translations/pt-BR/loc/recipes/explore_vaults_a_capital.json
@@ -94,7 +94,7 @@
         },
         {
             "id": "explore_vaultcapital5_setup",
-            "label": "Começando uma Expedição: a congregação de St Felix de Schu├ren",
+            "label": "Começando uma Expedição: a congregação de St Felix de Schüren",
             "actionid": "explore",
             "requirements": {
                 "funds": 1,
