--- a/translations/pt-BR/loc/recipes/hunting_countermeasures.json
+++ b/translations/pt-BR/loc/recipes/hunting_countermeasures.json
@@ -632,8 +632,8 @@
         {
             "id": "hunterspeakwinter",
             "actionid": "talk",
-            "label": "Dica na História Enfurecida",
-            "startdescription": "'Vamos falar de pontas. Vamos falar do sol que está em declínio. Vamos falar de coisas que não estão bem mortas e não vamos sequer morrer. .' [Isso pode desviar o Caçador do caminho deles, mas sempre aumentará a sua própria Apare.]",
+            "label": "Mencionar a História em Trapos",
+            "startdescription": "'Vamos falar de finais. Vamos falar do sol que está em declínio. Vamos falar de coisas que não estão bem mortas e não vão bem morrer...' [Isso pode desviar o Caçador do caminho deles, mas sempre aumentará o seu próprio Pavor.]",
             "requirements": {
                 "winter": 1,
                 "lore": 1
