--- a/translations/pt-BR/loc/recipes/legacy_aspirant_recipes.json
+++ b/translations/pt-BR/loc/recipes/legacy_aspirant_recipes.json
@@ -20,7 +20,7 @@
                 }
             ],
             "startdescription": "Outro turno: esfregar os corredores escurecidos, entregando cartas para inválidos com olhos vazios, conduzindo macas carregados de cadáveres até o porão.",
-            "description": "No meio do seu turno, o porteiro chefe te chama de lado. 'Nós não precisaremos mais de seus serviços', diz ele. 'Aqui: seu último pagamento. Nós pagamos até o final do mês.\nPerdi meu emprego. Pelo menos agora tenho um pouco de tempo para descansar, e minha Saúde melhora.\n[<b>Sonhar</b> está desbloqueado.]",
+            "description": "No meio do seu turno, o porteiro chefe te chama de lado. 'Nós não precisaremos mais de seus serviços', diz ele. 'Aqui: seu último pagamento. Nós pagamos até o final do mês.'\nPerdi meu emprego. Pelo menos agora tenho um pouco de tempo para descansar, e minha Saúde melhora.\n[<b>Sonhar</b> está desbloqueado.]",
             "warmup": 10,
             "craftable": true
         },
