--- a/translations/pt-BR/loc/recipes/legacy_generic_recipes.json
+++ b/translations/pt-BR/loc/recipes/legacy_generic_recipes.json
@@ -33,7 +33,7 @@
                 "fragmentsecrethistories": 1
             },
             "startdescription": ".",
-            "description": "Agora que encontrei uma localização, posso EXPLOR-la.",
+            "description": "Agora que encontrei uma localização, eu a posso EXPLORAR.",
             "warmup": 0,
             "maxexecutions": 1,
             "craftable": false
