--- a/translations/pt-BR/loc/recipes/study_3_research.json
+++ b/translations/pt-BR/loc/recipes/study_3_research.json
@@ -671,7 +671,7 @@
                 "fatiguing": 1
             },
             "startdescription": "Por vezes, talvez precise de voltar a uma compreensão mais básica de um determinado pedaço de vespa. [Isto irá dividir a história em dois fragmentos de nível inferior. Você pode recombiná-la mais tarde, mas isso não será tão fácil quanto dividi-la.]",
-            "description": "Análise é um tipo de vivisão. Motivo é a faca.",
+            "description": "Análise é um tipo de vivissecção. Razão é a faca.",
             "effects": {
                 "project": -1,
                 "fragmentedgeb": -1,
@@ -693,7 +693,7 @@
                 "fatiguing": 1
             },
             "startdescription": "Por vezes, talvez precise de voltar a uma compreensão mais básica de um determinado pedaço de vespa. [Isto irá dividir a história em dois fragmentos de nível inferior. Você pode recombiná-la mais tarde, mas isso não será tão fácil quanto dividi-la.]",
-            "description": "Análise é um tipo de vivisão. Motivo é a faca.",
+            "description": "Análise é um tipo de vivissecção. Razão é a faca.",
             "effects": {
                 "project": -1,
                 "fragmentedgec": -1,
@@ -715,7 +715,7 @@
                 "fatiguing": 1
             },
             "startdescription": "Por vezes, talvez precise de voltar a uma compreensão mais básica de um determinado pedaço de vespa. [Isto irá dividir a história em dois fragmentos de nível inferior. Você pode recombiná-la mais tarde, mas isso não será tão fácil quanto dividi-la.]",
-            "description": "Análise é um tipo de vivisão. Motivo é a faca.",
+            "description": "Análise é um tipo de vivissecção. Razão é a faca.",
             "effects": {
                 "project": -1,
                 "fragmentedged": -1,
@@ -737,7 +737,7 @@
                 "fatiguing": 1
             },
             "startdescription": "Por vezes, talvez precise de voltar a uma compreensão mais básica de um determinado pedaço de vespa. [Isto irá dividir a história em dois fragmentos de nível inferior. Você pode recombiná-la mais tarde, mas isso não será tão fácil quanto dividi-la.]",
-            "description": "Análise é um tipo de vivisão. Motivo é a faca.",
+            "description": "Análise é um tipo de vivissecção. Razão é a faca.",
             "effects": {
                 "project": -1,
                 "fragmentedgee": -1,
@@ -759,7 +759,7 @@
                 "fatiguing": 1
             },
             "startdescription": "Por vezes, talvez precise de voltar a uma compreensão mais básica de um determinado pedaço de vespa. [Isto irá dividir a história em dois fragmentos de nível inferior. Você pode recombiná-la mais tarde, mas isso não será tão fácil quanto dividi-la.]",
-            "description": "Análise é um tipo de vivisão. Motivo é a faca.",
+            "description": "Análise é um tipo de vivissecção. Razão é a faca.",
             "effects": {
                 "project": -1,
                 "fragmentedgef": -1,
@@ -781,7 +781,7 @@
                 "fatiguing": 1
             },
             "startdescription": "Por vezes, talvez precise de voltar a uma compreensão mais básica de um determinado pedaço de vespa. [Isto irá dividir a história em dois fragmentos de nível inferior. Você pode recombiná-la mais tarde, mas isso não será tão fácil quanto dividi-la.]",
-            "description": "Análise é um tipo de vivisão. Motivo é a faca.",
+            "description": "Análise é um tipo de vivissecção. Razão é a faca.",
             "effects": {
                 "project": -1,
                 "fragmentedgeg": -1,
