--- a/translations/pt-BR/loc/recipes/talking_9_generic.json
+++ b/translations/pt-BR/loc/recipes/talking_9_generic.json
@@ -47,7 +47,7 @@
                     "greedy": true
                 }
             ],
-            "startdescription": "Encontrei alguém que pode ser um espírito bonito - mas vou precisar convencê-los. [Ganhar por um Acervo requer a sua paixão.]",
+            "startdescription": "Encontrei alguém que pode ser um espírito irmão - mas vou precisar convencê-los. [Ganhar um Conhecido requer a sua paixão.]",
             "alt": [
                 {
                     "id": "talkmeetacquaintance",
