--- a/translations/pt-BR/loc/elements/skills.json
+++ b/translations/pt-BR/loc/elements/skills.json
@@ -237,7 +237,7 @@
         },
         {
             "id": "skillreasonb",
-            "label": "Habilidade: Esplendor Notável",
+            "label": "Habilidade: Saber Notável",
             "description": "Aprendi o suficiente para saber quão pouco sei. [Use isto com três Lições Aprendidas para ganhar mais Reason.]",
             "xtriggers": {
                 "careeradvancement": "skillreasonc"
@@ -341,7 +341,7 @@
         },
         {
             "id": "skillreasond_illumination",
-            "label": "Habilidade: Uma mente Rareficada",
+            "label": "Habilidade: Uma Mente Elevada",
             "description": "Minha mente está com vidro, e minha luz de memória. [Reason e Habilidade não podem aumentar mais.]",
             "aspects": {
                 "reasonskill": 4,
@@ -366,7 +366,7 @@
                 "passionskill": 1,
                 "ability": 1
             },
-            "description": "Os meus sonhos acordados às vezes superam os meus sonhos. [Use isto com Trabalho para Pintar, ou com Estudos e com duas Aulas Aprendidas para ganhar mais Passion.]",
+            "description": "Os meus sonhos acordados às vezes superam os meus sonhos. [Use isto com Trabalho para Pintar, ou com Estudos e com duas Lições Aprendidas para ganhar mais Paixão.]",
             "slots": [
                 {
                     "id": "G1",
@@ -494,7 +494,7 @@
         },
         {
             "id": "skillpassionc",
-            "label": "Habilidade: uma imaginação febrida",
+            "label": "Habilidade: uma Imaginação Febril",
             "description": "Os fantasmas ficam na minha mente acordando. [Use isto com quatro Lições Aprendidas para ganhar mais paixão.]",
             "aspects": {
                 "passionskill": 3,
